--- a/savis4/Savis4/src/app/features/linear-regression/scatter-plot/scatter-plot.component.html
+++ b/savis4/Savis4/src/app/features/linear-regression/scatter-plot/scatter-plot.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="graphBox">
     <div>
       <div class="least-squares-badge">
         <span class="least-squares-label">{{ 'lr_least_squares' | translate }}</span>
