--- a/savis4/Savis4/src/app/features/linear-regression/scatter-plot/scatter-plot.component.scss
+++ b/savis4/Savis4/src/app/features/linear-regression/scatter-plot/scatter-plot.component.scss
@@ -1,3 +1,9 @@
+.graphBox{
+  padding: 10px;
+  background-color: var(--eighth-col);
+  border-radius: 10px;
+}
+
 .chart-container {
     width: 80%;
   }
