--- a/savis4/Savis4/src/app/download-page/download-page.component.scss
+++ b/savis4/Savis4/src/app/download-page/download-page.component.scss
@@ -7,3 +7,16 @@
     text-align: center;
     padding: 10px 0; 
   }
+
+  body{
+    background-color: var(--fifth-col);
+    min-height: 100vh;
+  }
+
+  button{
+    background-color: var(--third-col);
+  }
+
+  button:hover{
+    background-color: var(--fourth-col);
+  }
