--- a/savis4/Savis4/src/app/features/correlation/input/input.component.scss
+++ b/savis4/Savis4/src/app/features/correlation/input/input.component.scss
@@ -12,3 +12,33 @@ form.ng-invalid {
   height:4px;
   background-color: green;
 }
+
+h2{
+  color:var(--second-col);
+}
+
+.italic{
+  color:var(--second-col);
+}
+
+#columnY, #columnX{
+  background-color: var(--fifth-col);
+  border: 2px solid var(--ninth-col);
+  color:var(--second-col);
+}
+
+b,p{
+  color:var(--second-col);
+}
+
+#buttonStyle{
+  background-color: var(--third-col);
+}
+#buttonStyle:hover{
+  background-color: var(--fourth-col);
+}
+
+#chart-wrap{
+  background-color:var(--eighth-col);
+  border-radius: 10px;
+}
