--- a/savis4/Savis4/src/app/features/linear-regression/linear-regression.component.html
+++ b/savis4/Savis4/src/app/features/linear-regression/linear-regression.component.html
@@ -1,3 +1,4 @@
+<div class="linearRegressionBox">
 <!-- header -->
 <app-navbar></app-navbar>
 
@@ -20,14 +21,14 @@
           </textarea>
           <!-- <csv-file-upload class="textarea" id="dataPoints" name="dataPoints" [(ngModel)]="datapoints" placeholder="e.g., 1,3\n2,5\n3,7"></csv-file-upload> -->
           <br>
-          <button class="bg-white hover:bg-gray-300 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow" (click)="updateChart()">{{ 'lr_update_chart' | translate }}</button>
+          <button class="btn" (click)="updateChart()">{{ 'lr_update_chart' | translate }}</button>
           <label class="file-input mx-2">
             <input 
             class="hidden" 
             type="file" 
             (change)="onFileSelect($event)" 
             accept=".csv">
-            <span class="bg-white hover:bg-gray-300 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">{{ 'lr_choose_file' | translate }}</span>
+            <span class="btn">{{ 'lr_choose_file' | translate }}</span>
           </label>
           <app-save-load-buttons 
             [data]="datapoints"
@@ -46,8 +47,8 @@
       </div>
     </div>
   </div>
-
   <!-- footer -->
   <footer class="static-footer">
     {{ "nav_copyright" | translate }}
   </footer>
+</div>
