--- a/savis4/Savis4/src/app/features/one-mean-ci/one-mean-ci.component.html
+++ b/savis4/Savis4/src/app/features/one-mean-ci/one-mean-ci.component.html
@@ -161,8 +161,7 @@
         border: 1px solid #ccc;
         overflow-y: auto;"> -->
         <div class="readonly" readonly
-        style="width: 150px; height: 300px; border: 3px;
-        border-color: black; border-radius: 10px; display: flex; overflow-x: auto;">
+        style="width: 150px; height: 300px; border-radius: 10px; display: flex; overflow-x: auto;">
             <table id="sample-table" >
               <thead *ngIf="sampleMeans.length > 0">
                 <tr>
