--- a/savis4/Savis4/src/app/features/one-mean-ci/one-mean-ci.component.scss
+++ b/savis4/Savis4/src/app/features/one-mean-ci/one-mean-ci.component.scss
@@ -190,8 +190,10 @@
 //   //   }
 #dot-chart-tutorial{
   padding: 20px;
+  background-color:var(--fifth-col);
 
     h3 {
+      color:var(--second-col);
       font-weight: bold;
       margin-top: 1ch;
       width: 100%;
@@ -200,12 +202,15 @@
       }
     }
     h1 {
+      color:var(--second-col);
       font-weight: bold;
     }
     .chart-input-form {
+      color:var(--second-col);
       display: flex;
       // border-bottom: 3px green solid;
       .data-form {
+        color:var(--second-col);
         display: flex;
         flex-direction: column;
         flex: 1;
@@ -214,6 +219,7 @@
         margin-bottom: 10px;
         //text-align: justify;
         p {
+          color:var(--second-col);
           margin-top: 1px;
           margin-bottom: 1px;
           text-align: center;
@@ -224,11 +230,15 @@
         }
       }
       .chart-wrap {
+        background-color: var(--eighth-col);
+        border-radius: 10px;
         flex: 8;
         padding: 5px;
       }
       label,
       input[type="number"] {
+        background-color: var(--fifth-col);
+        color:var(--second-col);
         height: 25px;
         border-radius: 5px;
         display: inline-block;
@@ -239,14 +249,18 @@
       margin-bottom: 1px;
     }
     textarea{
-      border: 2px solid gray;
+      background-color: var(--fifth-col);
+      border: 2px solid var(--ninth-col);
+      color:var(--second-col);
       margin: 2px;
       width: 100%;
       border-radius: 5px;
       resize: none;
     }
     select{
-      border: 1px solid gray;
+      background-color: var(--fifth-col);
+      border: 2px solid var(--ninth-col);
+      color:var(--second-col);
       width: 100%;
       height: 30px;
       border-radius: 5px;
@@ -255,7 +269,7 @@
 
 .btn2 {
   //background: linear-gradient(180deg, lighten($secondary-color, 5%), $secondary-color);
-  background-color: #93cb52;
+  background: var(--third-col);
   color: white;
   padding: 10px;
   border: none;
@@ -265,7 +279,7 @@
 
   &:hover {
    // background: linear-gradient(180deg, $secondary-color, darken($secondary-color, 5%));
-   background-color: #93cb52;
+   background-color: var(--fourth-col);
   }
   #data-div {
     display: flex;
@@ -294,13 +308,14 @@
   background-color: green;
 }
 
-$primary-color: #5ebe5e;
+$primary-color: var(--seventh-col);
 $secondary-color: #93cb52;
-$slider-active-color: #bfbfbf;
-$slider-track-color: #bfbfbf;
+$slider-active-color: var(--ninth-col);
+$slider-track-color: var(--ninth-col);
 
 button {
-  background: linear-gradient(180deg, lighten($secondary-color, 5%), $secondary-color);
+  //background: linear-gradient(180deg, lighten($secondary-color, 5%), $secondary-color);
+  background: var(--third-col);
   color: white;
   padding: 10px;
   border: none;
@@ -309,16 +324,18 @@ button {
   transition: background-color 0.3s;
 
   &:hover {
-    background: linear-gradient(180deg, $secondary-color, darken($secondary-color, 5%));
+    //background: linear-gradient(180deg, $secondary-color, darken($secondary-color, 5%));
+    background: var(--fourth-col);
   }
 
   &:disabled {
-    background: #bfbfbf;
+    background: var(--ninth-col);
     cursor: not-allowed;
   }
 }
 
 input[type="number"] {
+  color:var(--second-col);
   margin: 2px;
   border: 1px solid $slider-active-color;
   border-radius: 4px;
@@ -334,13 +351,17 @@ input[type="number"] {
 }
 
 input[type="checkbox"] {
+  accent-color: var(--seventh-col);
   &:disabled {
     cursor: not-allowed;
   }
 }
 
 .readonly {
-  background-color: rgb(185, 180, 180);
+  background-color: var(--fifth-col);
+  color:var(--second-col);
+  //background-color: rgb(185, 180, 180);
+  border: 2px solid var(--ninth-col);
   font-size: 1rem;
   width: 100%;
   cursor: default;
