--- a/savis4/Savis4/src/app/features/one-mean/one-mean.component.scss
+++ b/savis4/Savis4/src/app/features/one-mean/one-mean.component.scss
@@ -1,7 +1,9 @@
 #dot-chart-tutorial{
+  background-color: var(--fifth-col);
   padding: 20px;
 
     h3 {
+      color:var(--second-col);
       font-weight: bold;
       margin-top: 1ch;
       width: 100%;
@@ -11,8 +13,10 @@
     }
     h1 {
       font-weight: bold;
+      color:var(--second-col);
     }
     .chart-input-form {
+      color:var(--second-col);
       display: flex;
       // border-bottom: 3px green solid;
       .data-form {
@@ -24,6 +28,7 @@
         margin-bottom: 10px;
         //text-align: justify;
         p {
+          color:var(--second-col);
           margin-top: 1px;
           margin-bottom: 1px;
           text-align: center;
@@ -36,9 +41,12 @@
       .chart-wrap {
         flex: 8;
         padding: 5px;
+        background-color: var(--eighth-col);
+        border-radius: 10px;
       }
       label,
       input[type="number"] {
+        color: var(--second-col);
         height: 25px;
         border-radius: 5px;
         display: inline-block;
@@ -49,14 +57,17 @@
       margin-bottom: 1px;
     }
     textarea{
-      border: 2px solid gray;
+      background-color: var(--fifth-col);
+      border: 2px solid var(--ninth-col);
+      color:var(--second-col);
       margin: 2px;
       width: 100%;
       border-radius: 5px;
       resize: none;
     }
     select{
-      border: 1px solid gray;
+      background-color: var(--fifth-col);
+      border: 2px solid var(--ninth-col);
       width: 100%;
       height: 30px;
       border-radius: 5px;
@@ -70,13 +81,14 @@
   background-color: green;
 }
 
-$primary-color: #5ebe5e;
+$primary-color: var(--seventh-col);
 $secondary-color: #93cb52;
-$slider-active-color: #bfbfbf;
-$slider-track-color: #bfbfbf;
+$slider-active-color: var(--ninth-col);
+$slider-track-color: var(--ninth-col);
 
 button {
-  background: linear-gradient(180deg, lighten($secondary-color, 5%), $secondary-color);
+  //background: linear-gradient(180deg, lighten($secondary-color, 5%), $secondary-color);
+  background: var(--third-col);
   color: white;
   padding: 10px;
   border: none;
@@ -85,16 +97,19 @@ button {
   transition: background-color 0.3s;
 
   &:hover {
-    background: linear-gradient(180deg, $secondary-color, darken($secondary-color, 5%));
+    //background: linear-gradient(180deg, $secondary-color, darken($secondary-color, 5%));
+    background: var(--fourth-col);
   }
 
   &:disabled {
-    background: #bfbfbf;
+    background: var(--ninth-col);
     cursor: not-allowed;
   }
 }
 
 input[type="number"] {
+  color:var(--second-col);
+  background: var(--ninth-col);
   margin: 2px;
   border: 1px solid $slider-active-color;
   border-radius: 4px;
@@ -104,12 +119,13 @@ input[type="number"] {
 
   &:disabled {
     cursor: not-allowed;
-    background-color: rgb(185, 180, 180);
+    background-color: var(--ninth-col);
     color: rgb(185, 180, 180);
   }
 }
 
 input[type="checkbox"] {
+  accent-color: var(--seventh-col);
   &:disabled {
     cursor: not-allowed;
   }
