--- a/savis4/Savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.scss
+++ b/savis4/Savis4/src/app/features/one-proportion-ci/one-proportion-ci.component.scss
@@ -1,19 +1,23 @@
 .one-proportion-ci{
-  
+  background-color:var(--fifth-col);
   padding-left: 3rem;
+  padding-bottom: 50px;
   .title2{
     padding: 2rem;
     text-align: center;
     font-size: 30px;
     margin-bottom: -1rem;
+    color:var(--second-col);
   }
   
   .title3{
     font-size: 150%;
+    color:var(--second-col);
   }
 
   .stats{
     font-size: 19px;
+    color:var(--second-col);
   }
 
   .lhs, .rhs {
@@ -29,12 +33,14 @@
   }
 
   .lhs p, label{
+    color:var(--second-col);
     padding-top: 1rem;
     font-size: 19px;
   }
 
   .rhs{
     p{
+      color:var(--second-col);
       input[type=number]{
             width:10%;
           }
@@ -55,13 +61,20 @@
   }
 
   .l{
+    color:var(--second-col);
     margin-left: 27rem;
     margin-top: -16rem;
     font-size: 19px;
     text-decoration: underline;
   }
 
+  h6{
+    color:var(--second-col);
+  }
+
   .chart-wrap {
+    background-color: var(--eighth-col);
+    border-radius: 10px;
     width: 50%;
     height: 250px;
     margin-top: -5rem;
@@ -73,6 +86,8 @@
   }
 
   .chart-wrap2 {
+    background-color: var(--eighth-col);
+    border-radius: 10px;
     width: 50%;
     height: 250px;
     margin-top: -13rem;
@@ -81,6 +96,8 @@
   }
 
   .chart-wrap3 {
+    background-color: var(--eighth-col);
+    border-radius: 10px;
     width: 75%;
     height: 100%;
     margin-top: 1rem;
@@ -92,9 +109,11 @@
     border-radius: 10px;
     border: 1px black solid;
     //display: block;
-
+    background-color: var(--fifth-col);
+    border: 2px solid var(--ninth-col);
+    color:var(--second-col);
     &:disabled{
-      background-color: #929292;
+      background-color: var(--ninth-color);
       cursor: not-allowed;
       color: #929292;
     }
@@ -104,10 +123,14 @@
     width: 100%;
     padding: 5px;
     margin: 5px auto;
-    background-color: #73d564;
+    background-color: var(--third-col);
     color: #fff;
     font-size: 110%;
     border-radius: 5px;
+  }
+
+  .btn:hover{
+    background-color: var(--fourth-col);
   }
 
   .load-button,
@@ -159,6 +182,7 @@
 }
 
 .radio-group {
+  accent-color: var(--seventh-col);
   display: flex;
   align-items: center;
   label {
@@ -196,7 +220,11 @@ label {
   }
 }
 
-$primary-color: #5ebe5e;
+input[type="checkbox"]{
+  accent-color: var(--seventh-col);
+}
+
+$primary-color: var(--seventh-col);
 $secondary-color: #93cb52;
 $slider-active-color: #bfbfbf;
 $slider-track-color: #bfbfbf;
@@ -219,7 +247,8 @@ $slider-track-color: #bfbfbf;
     cursor: pointer;
     height: 20px;
     width: 20px;
-    border: 1px solid darken($primary-color, 15%)
+    //border: 1px solid darken($primary-color, 15%)
+    border: 1px solid var(--seventh-col);
   }
 
   &:focus {
@@ -229,9 +258,11 @@ $slider-track-color: #bfbfbf;
   &::-webkit-slider-runnable-track {
     width: 50%;
     height: 22px;
-    background: $slider-track-color;
+    //background: $slider-track-color;
+    background-color: var(--ninth-col);
     border-radius: 5px;
-    border: 1px  solid darken($slider-active-color, $amount: 15%)
+    //border: 1px  solid darken($slider-active-color, $amount: 15%)
+    border: 1px solid var(--seventh-col);
   }
 
   &::-moz-range-thumb {
@@ -242,7 +273,8 @@ $slider-track-color: #bfbfbf;
     cursor: pointer;
     height: 20px;
     width: 20px;
-    border: 1px solid darken($primary-color, 15%)
+    //border: 1px solid darken($primary-color, 15%)
+    border: 1px solid var(--seventh-col);
   }
 
   &::-moz-range-track {
@@ -262,4 +294,8 @@ $slider-track-color: #bfbfbf;
   color: #ffffff;
   text-align: center;
   padding: 10px 0; 
+}
+
+h1 {
+  font-weight: bold;
 }
