--- a/savis4/Savis4/src/app/features/two-means/two-means.component.html
+++ b/savis4/Savis4/src/app/features/two-means/two-means.component.html
@@ -9,7 +9,7 @@
   <div class="flex gap-3"  [ngClass]="sections.sectionOne ? '' : 'hidden'">
     <div class="w-3/12">
       <div class="w-full">
-        <div class="border border-gray-300 rounded-md">
+        <div>
           <select (change)="sampleSelect($event)"
             class="w-full border-t-0 border-l-0 border-r-0 border-b focus:outline-none rounded-lg p-1">
             <option disabled selected>{{'tm_select_data' | translate }}</option>
@@ -22,14 +22,15 @@
         </div>
         <button (click)="loadData()"
           id="loadData"
-          class="mt-1 border bg-primary text-white px-7 py-1.5 text-sm font-medium rounded-lg w-full">{{ 'tm_load' | translate }}</button>
+          class="mt-1 bg-primary text-white px-7 py-1.5 text-sm font-medium rounded-lg w-full">{{ 'tm_load' | translate }}</button>
         <button (click)="onResetChart()"
-          class="mt-1 border bg-primary text-white px-7 py-1.5 text-sm font-medium rounded-lg w-full">{{ 'tm_reset' | translate }}</button>
-        <label
-          class="mt-1 block text-center border bg-primary text-white px-7 py-1.5 text-sm font-medium rounded-lg w-full"
+          class="mt-1 bg-primary text-white px-7 py-1.5 text-sm font-medium rounded-lg w-full">{{ 'tm_reset' | translate }}</button>
+        <label id="buttonStyle"
+          class="mt-1 block text-center bg-primary text-white px-7 py-1.5 text-sm font-medium rounded-lg w-full"
           for="fileInput"> {{ 'tm_upload' | translate }} </label>
         <input type="file" id="fileInput" (change)="onFileSelected($event)" style="display: none;">
       </div>
+      <p></p>
       <div class="flex justify-center items-center">
         <app-save-load-buttons
           [data]="csvraw"
@@ -83,11 +84,12 @@
         class="w-full border border-gray-300 focus:border-gray-500 focus:outline-none p-2 rounded-lg ng-untouched ng-pristine ng-valid"
         type="number" value="1" min="1" max="100" />
       <button (click)="runSim()" *ngIf="activateSim"
-        class="mt-1 border bg-primary disabled: text-white px-7 py-1.5 text-sm font-medium rounded-lg w-full">{{ 'tm_run_sim' | translate }}
+        class="mt-1 bg-primary disabled: text-white px-7 py-1.5 text-sm font-medium rounded-lg w-full">{{ 'tm_run_sim' | translate }}
       </button>
       <button [disabled]="true" *ngIf="!activateSim"
-        class="mt-1 border bg-gray-400  text-gray-700 px-7 py-1.5 text-sm font-medium rounded-lg w-full">{{ 'tm_run_sim' | translate }}
+        class="mt-1 px-7 py-1.5 text-sm font-medium rounded-lg w-full">{{ 'tm_run_sim' | translate }}
       </button>
+      <p></p>
       <div class="text-sm font-medium mb-1">
         <div class="flex justify-between">
           <span>{{ 'tm_mean3' | translate }}</span>
@@ -104,7 +106,7 @@
       </div>
     </div>
     <div class="rhs w-9/12">
-      <h3>{{ 'tm_most_recent' | translate }}
+      <h3 class="chartTxt">{{ 'tm_most_recent' | translate }}
       </h3>
       <div class="chart-wrap"><canvas id="data-chart-3" height="200"></canvas></div>
       <div class="chart-wrap"><canvas id="data-chart-4" height="200"></canvas></div>
