--- a/savis4/Savis4/src/app/features/two-proportions/two-proportions.component.html
+++ b/savis4/Savis4/src/app/features/two-proportions/two-proportions.component.html
@@ -33,7 +33,7 @@
             </tr>
           </tbody>
         </table>
-        <button id="load-button" (click)="loadData()" class="btn border bg-primary text-white px-4 py-2 text-sm font-medium rounded-lg mb-4">{{'tp_loadData' | translate}}</button>
+        <button id="load-button" (click)="loadData()" class="btn bg-primary text-white px-4 py-2 text-sm font-medium rounded-lg mb-4">{{'tp_loadData' | translate}}</button>
         <div class="text-sm font-medium mb-3">
           <div class="flex justify-between">
             <span>{{ 'tp_A_Successes' | translate }} (p<sub>A</sub>) :</span>
@@ -66,12 +66,12 @@
         class="w-full border border-gray-300 focus:border-gray-500 focus:outline-none p-2 rounded-lg ng-untouched ng-pristine ng-valid"
         type="number" value="1" min="1" max="100" />
       <button (click)="runSim()" id="runSim" *ngIf="activateSim"
-        class="mt-1 border bg-primary disabled: text-white px-7 py-1.5 text-sm font-medium rounded-lg w-full">{{ 'tp_run_sim' | translate }}
+        class="mt-1 disabled: text-white px-7 py-1.5 text-sm font-medium rounded-lg w-full">{{ 'tp_run_sim' | translate }}
       </button>
       <button [disabled]="true" *ngIf="!activateSim"
-        class="mt-1 border bg-gray-400 text-gray-700 px-7 py-1.5 text-sm font-medium rounded-lg w-full">{{ 'tp_run_sim' | translate }}
+        class="mt-1 px-7 py-1.5 text-sm font-medium rounded-lg w-full">{{ 'tp_run_sim' | translate }}
       </button>
-       <hr>
+       <p></p>
       <div class="text-sm font-medium mb-2">
         <div class="flex justify-between">
           <span>{{ 'tp_group_A_random_successes' | translate }}  (p<sub>A</sub>) :</span>
