--- a/savis4/Savis4/src/app/features/two-proportions/two-proportions.component.scss
+++ b/savis4/Savis4/src/app/features/two-proportions/two-proportions.component.scss
@@ -1,6 +1,41 @@
 .if-disabled[disabled]{
     background-color: gainsboro;
 }
+.p-4{
+    background-color: var(--fifth-col);
+    padding-bottom: 100px;
+}
+
+h1,h2,h3,span,td, label{
+    color:var(--second-col);
+}
+h1{
+    font-weight: bold;
+}
+
+canvas{
+    background-color: var(--eighth-col);
+    border-radius: 10px;
+}
+
+input{
+    background-color: var(--fifth-col);
+    border: 2px solid var(--ninth-col);
+    color:var(--second-col);
+}
+
+input[type="checkbox"]{
+    accent-color: var(--seventh-col);
+}
+
+button{
+    background-color: var(--third-col);
+}
+
+button:hover{
+    background-color: var(--fourth-col);
+}
+
 .green-line {
     margin: 10px;
     width: 100%;
