--- a/savis4/Savis4/src/app/user-manual/user-manual.component.scss
+++ b/savis4/Savis4/src/app/user-manual/user-manual.component.scss
@@ -1,6 +1,6 @@
 .user-manual-container {
   padding: 40px;
-  background-color: white;
+  background-color: var(--fifth-col);
 
   .title {
     text-align: center;
@@ -20,6 +20,7 @@
       h2, h3 {
         margin: 0;
         padding-bottom: 10px;
+        color:var(--second-col);
       }
 
       .green-box {
@@ -45,12 +46,16 @@
         width: 900px;
         max-width: none;
         height: auto;
-        border: 1px solid #ccc;
+        border: 1px solid var(--ninth-col);
         border-radius: 8px;
         margin-left: auto;
       }
     }
   }
+}
+h1{
+  color:var(--second-col);
+  font-weight: bold;
 }
 
 .static-footer {
