Spanish in about page

--- a/savis4/Savis4/src/app/components/about/about.component.html
+++ b/savis4/Savis4/src/app/components/about/about.component.html
@@ -42,7 +42,7 @@
                 <div class="bg-lightMintGreen p-4 mt-2 -ml-24 -mt-24 relative">
                     <div class="absolute left-1/2 ml-4 top-28 bottom-6 w-1 bg-greenBar z-10"></div>
                     <div class="absolute left-36 right-16 top-1/2 mt-6 h-1 bg-greenBar"></div>
-                    <h1 class="text-4xl font-bold mt-5 pt-8 inline-block pl-40">Team Members</h1>
+                    <h1 class="text-4xl font-bold mt-5 pt-8 inline-block pl-40">{{ 'team_members' | translate }}</h1>
                     <div class="border-b-4 border-darkGray w-1/4 mb-4 ml-40 -mt-2"></div>
                     <div class="flex flex-wrap w-full gap-y-6 mb-6">
                         <div class="flex flex-col items-start w-full md:w-1/2 ">
