#118 Spanish Translation for Multiple Pages

--- a/savis4/src/app/components/about/about.component.html
+++ b/savis4/src/app/components/about/about.component.html
@@ -5,7 +5,7 @@
         <div class="w-1/2 pl-8">
             <div class="bg-darkGray p-8 mt-16">
                 <div class="bg-lightGray p-4 mt-2 -mr-24 -mb-24 relative z-10">
-                    <h1 class="text-4xl font-bold mt-5 pt-8 border-b-4 border-darkGray pb-2 inline-block">What is SAVIS?</h1>
+                    <h1 class="text-4xl font-bold mt-5 pt-8 border-b-4 border-darkGray pb-2 inline-block">{{'about_title' | translate}}</h1>
                     <p class="p-4 text-left text-sm md:text-base">{{ 'about_project' | translate }}</p>
                     <p class="p-4 text-left text-sm md:text-base">{{ 'about_created' | translate }}</p>
                 </div>
