--- a/savis4/src/app/user-manual/user-manual.component.html
+++ b/savis4/src/app/user-manual/user-manual.component.html
@@ -1,22 +1,14 @@
 <app-navbar></app-navbar>
 
 <div class="user-manual-container">
-  <h1 class="title">User Manual</h1>
+  <h1 class="title">{{'uman_title' | translate}}</h1>
   <div class="content">
     <div class="text-section">
-      <h2 style="font-size: 2rem;">Hypothesis Testing</h2>
-      <h3 style="font-size: 2rem;">One Proportion Hypothesis Testing</h3>
+      <h2 style="font-size: 2rem;">{{'uman_hyp_testing_title' | translate}}</h2>
+      <h3 style="font-size: 2rem;">{{'uman_hyp_testing_subtitle1' | translate}}</h3>
 
       <div class="green-box">
-        <p>
-          The One Proportion Hypothesis Test tool simulates repeated trials of coin flips to help visualize how sample proportions behave under a given probability. 
-          Users can adjust the number of tosses, the number of samples drawn, and the assumed probability of heads. 
-          This helps demonstrate the binomial distribution and understand whether observed proportions deviate significantly from what's expected under a given hypothesis. <br> <br>
-          To use the tool, begin by setting the probability of heads (p), then choose how many coin tosses will occur in each sample. After entering the number of samples to add, click Draw Samples to simulate. 
-          The resulting bar chart shows the number of heads in each trial across all samples. Red bars indicate observed frequencies, blue dots represent the theoretical binomial distribution, and green bars highlight selected intervals for custom analysis. <br> <br>
-          The left sidebar provides statistics including total number of samples, average number of heads, and standard deviation. You can also use sliders to focus on a specific interval of head counts—this lets you determine what proportion of your samples fall within a chosen range. 
-          This feature is especially useful for hypothesis testing scenarios where you're checking for values that are too extreme under the null hypothesis.
-        </p>
+        <p [innerHTML]="'uman_hyp_testing_par1' | translate"></p>
       </div>
 
     </div>
@@ -28,19 +20,10 @@
   </div>
   <div class="content">
     <div class="text-section">
-      <h3 style="font-size: 2rem;">Two Proportion Hypothesis Testing</h3>
+      <h3 style="font-size: 2rem;">{{'uman_hyp_testing_subtitle2' | translate}}</h3>
 
       <div class="green-box">
-        <p>
-          The Two Proportion Hypothesis Test tool helps you simulate and analyze the difference in success rates between two groups. 
-          Users enter the number of successes and failures for Group A and Group B. The tool calculates the proportions and the 
-          difference between them. <br><br>
-          Make sure to always click "Load Data" after entering data. After loading the data, you can simulate random reallocations of success outcomes between the groups to build a sampling 
-          distribution. This helps visualize how often differences as extreme as the original would occur by chance. <br><br>
-          The third section displays the sampling distribution of the differences in proportions. You can adjust the minimum and 
-          maximum bounds to focus on a specific range and evaluate how frequently extreme values appear. This is useful for understanding 
-          statistical significance and evaluating the null hypothesis that the two proportions are equal.
-        </p>
+        <p [innerHTML]="'uman_hyp_testing_par2' | translate"></p>
       </div>
 
     </div>
