#120 JIRA/ User Manual - Bar Chart Description

--- a/savis4/Savis4/src/app/user-manual/user-manual.component.html
+++ b/savis4/Savis4/src/app/user-manual/user-manual.component.html
@@ -50,6 +50,31 @@
       <img src="assets/User-Manual-TPHT2.png" alt="Chart 1" class="screenshot" style="width: 900px;" />
     </div>
   </div>
+
+  <div class="content">
+    <div class="text-section">
+      <h4 style="font-size: 2rem;"> Graphs</h4>
+      <h5 style=" font-size: 2rem;"> Bar Chart</h5>
+      <div class="green-box">
+        <p>
+          The Bar Chart tool helps to visually compare and organize data. There are two ways to use the Bar Chart tool. <br><br>
+          The first way is to directly type the data into the box that says “Please enter data or drop column titles from CSV file here”. 
+          It is also important to note that the data must be entered vertically. For example, do not enter multiple data points next to 
+          each other. Instead, after typing a data point, press enter to type the next data point on a new row. After typing all the data 
+          points, click on the “Load Data” button.<br><br>
+          The second way is to upload a CSV file. To do this, click on the “Upload Data File” button. The user’s file folder in their computer 
+          should pop up. From here, double click on a CSV file. It is also important to note that in the CSV file, each data point should be in 
+          different rows under the same column. After double clicking on the CSV file, the data points in the chosen CSV file should appear on 
+          the box that says “Please enter data or drop column titles from CSV file here”. Then, click on the “Load Data” button.<br><br>
+          The x-axis of the bar chart represents the data points that the user entered. The y-axis of the bar chart represents the proportion, 
+          which is the number of times a specific data point appears by the total number of the data points there are in the data. After uploading 
+          the data, there is a frequency table next to the bar chart, which gives more information about the data in terms of frequency.<br><br>
+          Lastly, there is a Draw Sample section under the Bar Chart. Users can type the number they would like for the sample size. Users can also 
+          click on the up or down arrow in the box to increase or decrease the number for the sample size. After entering a number in the sample size
+          box, click on the “Run Simulation” button. This makes new samples based on the sample size given using the data points from the bar chart that 
+          the user entered.
+
+        </p>
   <p></p>
 </div>
 
